fixing class on mobile filter button in producers#index view

--- a/app/assets/stylesheets/components/_mobile_filters.scss
+++ b/app/assets/stylesheets/components/_mobile_filters.scss
@@ -4,7 +4,7 @@
   height: 100vh;
   width: 100%;
   background-color: white;
-  z-index: 1;
+  z-index: 2;
   transition: top 0.6s ease;
 }
 
